--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <p class="slide">Moinuddin seems to have been unanimously regarded as a great saint after his passing. The tomb (dargāh) of Muʿīn al-Dīn became a deeply venerated site in the century following the preacher's death in March 1236. Honoured by members of all social classes, the tomb was treated with great respect by the era's most important Sunni rulers.</p>
             <div class="bottom">
               <button>Your advantage</button>
-              <p>Time left: <span id="demo">15 Days 23 Hours 35 Seconds</span> </p>
+              <p>Time left: <span id="demu">15 Days 23 Hours 35 Seconds</span> </p>
               <button>Purchase now</button>
             </div>
           </div>
@@ -189,7 +189,7 @@
             <p class="slide">Moinuddin seems to have been unanimously regarded as a great saint after his passing. The tomb (dargāh) of Muʿīn al-Dīn became a deeply venerated site in the century following the preacher's death in March 1236. Honoured by members of all social classes, the tomb was treated with great respect by the era's most important Sunni rulers.</p>
             <div class="bottom">
               <button>Your advantage</button>
-              <p>Time left: <span id="demo">15 Days 23 Hours 35 Seconds</span> </p>
+              <p>Time left: <span id="demo1">15 Days 23 Hours 35 Seconds</span> </p>
               <button>Purchase now</button>
             </div>
           </div>
@@ -199,7 +199,7 @@
             <p class="slide">Moinuddin seems to have been unanimously regarded as a great saint after his passing. The tomb (dargāh) of Muʿīn al-Dīn became a deeply venerated site in the century following the preacher's death in March 1236. Honoured by members of all social classes, the tomb was treated with great respect by the era's most important Sunni rulers.</p>
             <div class="bottom">
               <button>Your advantage</button>
-              <p>Time left: <span id="demo">15 Days 23 Hours 35 Seconds</span> </p>
+              <p>Time left: <span id="demo2">15 Days 23 Hours 35 Seconds</span> </p>
               <button>Purchase now</button>
             </div>
           </div>
@@ -209,7 +209,7 @@
             <p class="slide">Moinuddin seems to have been unanimously regarded as a great saint after his passing. The tomb (dargāh) of Muʿīn al-Dīn became a deeply venerated site in the century following the preacher's death in March 1236. Honoured by members of all social classes, the tomb was treated with great respect by the era's most important Sunni rulers.</p>
             <div class="bottom">
               <button>Your advantage</button>
-              <p>Time left: <span id="demo">15 Days 23 Hours 35 Seconds</span> </p>
+              <p>Time left: <span id="demo3">15 Days 23 Hours 35 Seconds</span> </p>
               <button>Purchase now</button>
             </div>
           </div>
@@ -219,7 +219,7 @@
             <p class="slide">Moinuddin seems to have been unanimously regarded as a great saint after his passing. The tomb (dargāh) of Muʿīn al-Dīn became a deeply venerated site in the century following the preacher's death in March 1236. Honoured by members of all social classes, the tomb was treated with great respect by the era's most important Sunni rulers.</p>
             <div class="bottom">
               <button>Your advantage</button>
-              <p>Time left: <span id="demo">15 Days 23 Hours 35 Seconds</span> </p>
+              <p>Time left: <span id="demo4">15 Days 23 Hours 35 Seconds</span> </p>
               <button>Purchase now</button>
             </div>
           </div>
